welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:3: error: not found: value Direction
    setDirection(Direction.EAST)
                 ^DwarfCode:8: error: not found: value Direction
    setDirection(Direction.WEST)
                 ^DwarfCode:19: error: not found: value Direction
  if (getDirection()==Direction.EAST && estFaceMur) {
                      ^